@@ -1,6 +1,6 @@
 .btn {
   *display: inline;
-  padding: 6px 20px;
+  padding: 6px 10px;
   *margin-left: .3em;
   font-size: 14px;
   line-height: 20px;
@@ -423,8 +423,8 @@ input[type="submit"].btn.btn-mini {
   min-height: 20px;	
   padding: 5px;
   margin-left: 10px;
-  min-width:300px;
-  max-width:600px;
+  min-width:250px;
+  max-width:400px;
   line-height:16px;
   word-break:break-all;
   word-wrap: break-word; 
@@ -443,9 +443,18 @@ input[type="submit"].btn.btn-mini {
   border-color: rgba(0, 0, 0, 0.15);
 }
 
-.well-large {
+.well-content{
   display:inline-block;
+  min-width:20px;
+  max-width:400px;
   padding: 5px;
+  -webkit-border-radius: 6px;
+     -moz-border-radius: 6px;
+          border-radius: 6px;
+}
+
+.well-large {
+  padding: 20px;
   -webkit-border-radius: 6px;
      -moz-border-radius: 6px;
           border-radius: 6px;
